# resource-cli

./: Cargo.toml  README.md
data/: data.json
src/: main.rs
src/data/: add_data.rs  data.json  data.rs  update_data.rs
src/prompts/: search.rs  todays_hot.rs  trending.rs
src/vote/: rate.rs
