[package]
name = "resource-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.4.11"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
reqwest = { version = "0.11.23", features = ["json"] }
tokio = { version = "1.35.1", features = ["full"] }
dialoguer = "0.11.0"
colored = "2.1.0"
chrono = "0.4.31"
rand = "0.8.5"
async-recursion = "1.0.5"
